--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:testnet": "vite --mode testnet",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "build:testnet": "vite build --mode testnet",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -39,10 +40,12 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.86.0",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.90.12",
+    "@velto/contracts": "file:../premarket-contracts/sdk",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -64,6 +67,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.1",
     "vaul": "^0.9.9",
+    "viem": "^2.41.2",
+    "wagmi": "^2.19.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -73,6 +78,7 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@wagmi/cli": "^2.8.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
